--- a/src/govuk/components/header/_index.scss
+++ b/src/govuk/components/header/_index.scss
@@ -36,7 +36,15 @@
 
   .govuk-header__logotype {
     display: inline-block;
+
+    // Add a gap between logo and any product name
     margin-right: govuk-spacing(1);
+
+    // But remove it if there's nothing after the logo to keep hover and focus
+    // states neat
+    &:last-child {
+      margin-right: 0;
+    }
   }
 
   .govuk-header__logotype-crown {
