--- a/src/govuk/components/checkboxes/template.njk
+++ b/src/govuk/components/checkboxes/template.njk
@@ -14,13 +14,6 @@
    {% set describedBy = params.fieldset.describedBy %}
 {% endif %}
 
-{% set isConditional = false %}
-{% for item in params.items %}
-  {% if item.conditional.html %}
-    {% set isConditional = true %}
-  {% endif %}
-{% endfor %}
-
 {#- fieldset is false by default -#}
 {% set hasFieldset = true if params.fieldset else false %}
 
@@ -51,7 +44,7 @@
 {% endif %}
   <div class="govuk-checkboxes {%- if params.classes %} {{ params.classes }}{% endif %}"
     {%- for attribute, value in params.attributes %} {{ attribute }}="{{ value }}"{% endfor %}
-    {%- if isConditional %} data-module="govuk-checkboxes"{% endif -%}>
+    data-module="govuk-checkboxes">
     {% for item in params.items %}
       {% if item %}
         {#- If the user explicitly sets an id, use this instead of the regular idPrefix -#}
@@ -79,6 +72,7 @@
             {{-" checked" if item.checked }}
             {{-" disabled" if item.disabled }}
             {%- if item.conditional.html %} data-aria-controls="{{ conditionalId }}"{% endif -%}
+            {%- if item.behaviour %} data-behaviour="{{ item.behaviour }}"{% endif -%}
             {%- if itemDescribedBy %} aria-describedby="{{ itemDescribedBy }}"{% endif -%}
             {%- for attribute, value in item.attributes %} {{ attribute }}="{{ value }}"{% endfor -%}>
             {{ govukLabel({
