Update link styles and apply to other components

--- a/app/views/examples/links/index.njk
+++ b/app/views/examples/links/index.njk
@@ -58,7 +58,39 @@
         </p>
       {% endfor %}
       </section>
+
     {% endfor %}
+    </div>
+  </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-half">
+
+      <h2 class="govuk-heading-l govuk-!-margin-top-6">Multi-line links</h2>
+
+      <p class="govuk-heading-xl">
+        <a class="govuk-link" href="#">Research your family history using the General Register Office</a>
+      </p>
+
+      <p class="govuk-heading-l">
+        <a class="govuk-link" href="#">Research your family history using the General Register Office</a>
+      </p>
+
+      <p class="govuk-heading-m">
+        <a class="govuk-link" href="#">Consultation on amendments to the Attorney General’s Code of Practice issued under Section 377A of the Proceeds of Crime Act 2002</a>
+      </p>
+
+      <p class="govuk-heading-s">
+        <a class="govuk-link" href="#">Consultation on amendments to the Attorney General’s Code of Practice issued under Section 377A of the Proceeds of Crime Act 2002</a>
+      </p>
+
+      <p class="govuk-body">
+        <a class="govuk-link" href="#">Consultation on amendments to the Attorney General’s Code of Practice issued under Section 377A of the Proceeds of Crime Act 2002</a>
+      </p>
+
+      <p class="govuk-body-s">
+        <a class="govuk-link" href="#">Consultation on amendments to the Attorney General’s Code of Practice issued under Section 377A of the Proceeds of Crime Act 2002</a>
+      </p>
 
     </div>
   </div>
