--- a/src/govuk/components/tabs/_index.scss
+++ b/src/govuk/components/tabs/_index.scss
@@ -102,9 +102,9 @@
       }
 
       .govuk-tabs__tab {
-        @include govuk-link-style-text;
-
+        @include govuk-link-common;
         margin-bottom: 0;
+        color: $govuk-text-colour;
 
         &:after {
           content: "";
