--- a/src/govuk/components/details/_index.scss
+++ b/src/govuk/components/details/_index.scss
@@ -23,10 +23,6 @@
     color: $govuk-link-colour;
     cursor: pointer;
 
-    &:hover {
-      color: $govuk-link-hover-colour;
-    }
-
     &:focus {
       @include govuk-focused-text;
     }
@@ -34,6 +30,7 @@
 
   // ...but only underline the text, not the arrow
   .govuk-details__summary-text {
+    @include govuk-link-common;
     text-decoration: underline;
   }
 
