--- a/src/govuk/components/header/_index.scss
+++ b/src/govuk/components/header/_index.scss
@@ -70,6 +70,8 @@
 
     &:hover {
       text-decoration: underline;
+      text-decoration-thickness: 3px;
+      text-underline-offset: .1em;
     }
 
     &:focus {
@@ -103,10 +105,10 @@
     &:hover,
     &:active {
       // Negate the added border
-      margin-bottom: -1px;
+      margin-bottom: -3px;
       // Omitting colour will use default value of currentColor – if we
       // specified currentColor explicitly IE8 would ignore this rule.
-      border-bottom: 1px solid;
+      border-bottom: 3px solid;
     }
 
     // Remove any borders that show when focused and hovered.
@@ -161,6 +163,8 @@
 
     &:hover {
       text-decoration: underline;
+      text-decoration-thickness: 3px;
+      text-underline-offset: .1em;
     }
 
     &:focus {
