Improve readability of links
Reduce the thickness of link underlines and offset them from the text in order to improve readability. This should help especially when multiple links are included in long lists (for example, search results pages) or at larger sizes.

Allow the thickness and offset to be overridden, so that anyone using GOV.UK Frontend outside of GOV.UK can opt out of these changes.

Co-authored-by: Chris Thomas <christopher.thomas@digital.cabinet-office.gov.uk>
Co-authored-by: Charlotte Downs <charlotte.downs@digital.cabinet-office.gov.uk>

--- a/src/govuk/helpers/_links.scss
+++ b/src/govuk/helpers/_links.scss
@@ -10,9 +10,29 @@
 
 @mixin govuk-link-common {
   @include govuk-typography-common;
+  @include govuk-link-decoration;
 
   &:focus {
     @include govuk-focused-text;
+  }
+}
+
+/// Link decoration mixin
+///
+/// Provides the text decoration for links, including any underline offset
+///
+/// @access public
+@mixin govuk-link-decoration {
+  $thickness: if(
+    $govuk-link-underline-thickness,
+    $govuk-link-underline-thickness,
+    auto
+  );
+
+  text-decoration: solid underline $thickness;
+
+  @if ($govuk-link-underline-offset) {
+    text-underline-offset: $govuk-link-underline-offset;
   }
 }
 
