Update details to use new link styles
Because we want to apply the hover state when any part of the summary is hovered (including the marker), refactor the `govuk-link-decoration` mixin to split out the contents of the `:hover` selector so that we can apply it to components seperately.

--- a/src/govuk/helpers/_links.scss
+++ b/src/govuk/helpers/_links.scss
@@ -12,6 +12,10 @@
   @include govuk-typography-common;
   @include govuk-link-decoration;
 
+  &:hover {
+    @include govuk-link-hover-decoration;
+  }
+
   &:focus {
     @include govuk-focused-text;
   }
@@ -33,12 +37,19 @@
     @if ($govuk-link-underline-offset) {
       text-underline-offset: $govuk-link-underline-offset;
     }
+  }
+}
 
-    @if ($govuk-link-hover-underline-thickness) {
-      &:hover {
-        text-decoration-thickness: $govuk-link-hover-underline-thickness;
-      }
-    }
+/// Link hover decoration mixin
+///
+/// Provides the text decoration for links in their hover state, intended to
+/// be used within a `:hover` pseudo-selector
+///
+/// @access public
+
+@mixin govuk-link-hover-decoration {
+  @if ($govuk-new-link-styles and $govuk-link-hover-underline-thickness) {
+    text-decoration-thickness: $govuk-link-hover-underline-thickness;
   }
 }
 
