Disable hover state for footer links in columns
Unfortunately there's a bug in Chrome which means links are mis-painted on hover when they're within CSS columns [1]. However, most service teams do not use the multi-column layout in the footer. We know GOV.UK do use it, but are already using a different implementation which does not use CSS columns. Therefore, disable the hover style for links within columns as think this feature is rarely used, if at all.

[1]: https://bugs.chromium.org/p/chromium/issues/detail?id=1190987

--- a/src/govuk/components/footer/_index.scss
+++ b/src/govuk/components/footer/_index.scss
@@ -178,6 +178,13 @@
     padding: 0;
     list-style: none;
     column-gap: $govuk-gutter; // Support: Columns
+
+    // Disable thicker underlines on hover because of a bug in Chromium
+    // affecting links within columns
+    // https://bugs.chromium.org/p/chromium/issues/detail?id=1190987
+    .govuk-footer__link:hover {
+      text-decoration-thickness: auto;
+    }
   }
 
   @include govuk-media-query ($from: desktop) {
