--- a/src/govuk/core/_links.scss
+++ b/src/govuk/core/_links.scss
@@ -27,6 +27,10 @@
     @include govuk-link-style-text;
   }
 
+  .govuk-link--inverse {
+    @include govuk-link-style-inverse;
+  }
+
   .govuk-link--no-underline {
     @include govuk-link-style-no-underline;
   }
