Avoid using text-decoration shorthand
Split into separate `text-decoration` and `text-decoration-thickness` properties because Safari doesn’t support `text-decoration-thickness` in the `text-decoration` shorthand.

Safari (and older browsers that don’t support text-decoration-thickness) ignore the property entirely when it contains a thickness, so splitting it also ensures that older browsers still get the underline on elements that wouldn’t normally have an underline (like the details component)

--- a/src/govuk/helpers/_links.scss
+++ b/src/govuk/helpers/_links.scss
@@ -23,13 +23,11 @@
 ///
 /// @access public
 @mixin govuk-link-decoration {
-  $thickness: if(
-    $govuk-link-underline-thickness,
-    $govuk-link-underline-thickness,
-    auto
-  );
+  text-decoration: underline;
 
-  text-decoration: solid underline $thickness;
+  @if ($govuk-link-underline-thickness) {
+    text-decoration-thickness: $govuk-link-underline-thickness;
+  }
 
   @if ($govuk-link-underline-offset) {
     text-underline-offset: $govuk-link-underline-offset;
