Update accordion to use new link styles
Simplify the code by removing the `accordion-link-colour` abstractions.

Move the colour definition to the `section-button` rather than inheriting it from the `section-header`, which I believe is leftover from when the `section-header` was the element that was ‘hovered’, and thus we needed to inherit the colour depending on hover state.

Apply link styles to the `section-button` on hover. There’s some duplication here, but we know the accordion component is due for some major updates soon so avoid worrying about it for now.

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -1,8 +1,4 @@
 @include govuk-exports("govuk/component/accordion") {
-
-  $govuk-accordion-link-colour: $govuk-link-colour;
-  $govuk-accordion-link-hover-colour: govuk-colour("light-blue");
-
   .govuk-accordion {
     @include govuk-responsive-margin(6, "bottom");
   }
@@ -97,7 +93,6 @@
       // Safe area on the right to avoid clashing with icon
       padding-right: 40px;
       border-top: 1px solid $govuk-border-colour;
-      color: $govuk-accordion-link-colour;
       cursor: pointer;
     }
 
@@ -109,7 +104,7 @@
       margin-left: 0;
       padding: 0;
       border-width: 0;
-      color: inherit;
+      color: $govuk-link-colour;
       background: none;
       text-align: left;
       cursor: pointer;
@@ -137,7 +132,13 @@
     }
 
     .govuk-accordion__section-button:hover:not(:focus) {
+      color: $govuk-link-hover-colour;
       text-decoration: underline;
+
+      // This needs to come after the text-decoration property otherwise
+      // text-decoration, as a shorthand property, resets it to auto
+      @include govuk-link-hover-decoration;
+      text-underline-offset: $govuk-link-underline-offset;
     }
 
     // For devices that can't hover such as touch devices,
