Work around link hover bug in Safari
There’s a bug in Safari that means that changes to text-decoration-thickness on hover are not applied above certain font sizes, unless there is also another change – like a change to the text colour. [1]

Add a text colour change to the muted link style by making it black (text-coloured) on hover.

Force a text colour change for text and inverse links (which currently don’t change colour) by setting the alpha channel to 99% on hover. This should generally be imperceivable, but is enough to force Safari to paint the hover style correctly.

[1]: https://bugs.webkit.org/show_bug.cgi?id=224483

--- a/src/govuk/helpers/_links.scss
+++ b/src/govuk/helpers/_links.scss
@@ -202,10 +202,13 @@
 
 @mixin govuk-link-style-muted {
   &:link,
-  &:visited,
+  &:visited {
+    color: $govuk-secondary-text-colour;
+  }
+
   &:hover,
   &:active {
-    color: $govuk-secondary-text-colour;
+    color: $govuk-text-colour;
   }
 
   // When focussed, the text colour needs to be darker to ensure that colour
@@ -242,8 +245,16 @@
 
 @mixin govuk-link-style-text {
   &:link,
-  &:visited,
-  &:hover,
+  &:visited {
+    @include govuk-text-colour;
+  }
+
+  // Force a colour change on hover to work around a bug in Safari
+  // https://bugs.webkit.org/show_bug.cgi?id=224483
+  &:hover {
+    color: rgba($govuk-text-colour, .99);
+  }
+
   &:active,
   &:focus {
     @include govuk-text-colour;
@@ -276,10 +287,15 @@
 
 @mixin govuk-link-style-inverse {
   &:link,
-  &:visited,
+  &:visited {
+    color: govuk-colour("white");
+  }
+
+  // Force a colour change on hover to work around a bug in Safari
+  // https://bugs.webkit.org/show_bug.cgi?id=224483
   &:hover,
   &:active {
-    color: govuk-colour("white");
+    color: rgba(govuk-colour("white"), .99);
   }
 
   &:focus {
