--- a/app/views/examples/links/index.njk
+++ b/app/views/examples/links/index.njk
@@ -17,6 +17,10 @@
   'Muted link': 'govuk-link--muted'
 } %}
 
+{% set modifiers = {
+  'with no underline': 'govuk-link--no-underline'
+} %}
+
 {% set states = {
   'Link': ':link',
   'Visited link': ':visited',
@@ -54,6 +58,18 @@
             {{ state_description}}
           </a>
         </p>
+      {% endfor %}
+
+        {% for modifier_description, modifier_class in modifiers %}
+        <h3 class="govuk-heading-m">{{ modifier_description }}</h2>
+
+        {% for state_description, state_class in states %}
+          <p class="govuk-body">
+            <a href="/#{{ randomPageHash }}" class="govuk-link {{ variant_class }} {{ modifier_class }} {{ state_class }}">
+              {{ state_description}}
+            </a>
+          </p>
+        {% endfor %}
       {% endfor %}
       </section>
     {% endfor %}
